# c-_design_patterrn

./: .gitignore  CMakeLists.txt  README.md  policy_based_class.cpp
pattern/: policy_base_class.h
